--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net452" />
-  <package id="AspNet.ScriptManager.jQuery" version="1.10.2" targetFramework="net452" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="AspNet.ScriptManager.bootstrap" version="3.3.6" targetFramework="net452" />
+  <package id="AspNet.ScriptManager.jQuery" version="3.1.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.6.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="eZet.EveLib.Core" version="3.0.8" targetFramework="net452" />
+  <package id="eZet.EveLib.EveXml" version="3.0.8" targetFramework="net452" />
+  <package id="jQuery" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
@@ -28,7 +30,8 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
