--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="eZet.EveLib.Core" version="3.0.8" targetFramework="net452" />
   <package id="eZet.EveLib.EveXml" version="3.0.8" targetFramework="net452" />
+  <package id="eZet.EveLib.StaticData" version="3.0.0" targetFramework="net452" />
   <package id="jQuery" version="3.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
